fix: resolve Sonar issues S1128/S1481/S1854/S1068/S1905/S6213/S4738/S1612/S125/S1130/S108
- S1128: remove unused imports across ~25 test and main source files
- S1481/S1854: remove unused local variables in 3 test files
- S1068: remove unused private fields in 4 files
- S1905: remove unnecessary casts in DataValidator, DataColumnMultipleValue, DefaultManyValidationCheckResult
- S6213: rename restricted identifier 'record' to 'entry' in 2 test files
- S4738: replace ImmutableList.of() with List.of() in ContextHeader, ReferenceDatumAfterChecking, PipelineContextRecordsTest, ColumnContextTest
- S1612: replace lambdas with method references in UserSessionLogWriterTest, TxAwareDeferredRunnerTest, ReportErrorsTest, DataAddedRuleTest
- S125: remove commented-out code in AuthorizationPublicationServiceTest, FileSenderInternationalisationForDownloadDatasetQueryTest, RightsRequestService
- S1130: remove declared-but-unthrown exceptions in DataImporter constructors, TxAwareDeferredRunnerTest, JwtBlacklistRegistryTest
- S108: add '// expected' comments in 8 empty catch blocks across ExtractionRateLimiterTest and RegisterReactiveResultTest

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>

Co-authored-by: ptcherniati <18171242+ptcherniati@users.noreply.github.com>